crates/core-subsystem/core-resolver/src/validation/snapshots/query_depth_limit_direct-2.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    SelectionSetTooDeep {
        depth: 6,
        max_depth: 5,
        pos: Pos(8:37),
    },
)
